--- a/projects/mymailsjquery/index.html
+++ b/projects/mymailsjquery/index.html
@@ -22,6 +22,7 @@
     <div class="container" id="messagescontainer">
       <div class="row">
         <p>Messages total : <span id="countmessages"></span></p>
+        <input type="text" placeholder="Rechercher" id="search" />
       </div>
       <div class="row">
         <input type="text" placeholder="Nouveau message" id="new-message" />
